--- a/src/main/resources/templates/homework/1、v-for&v-bind.html
+++ b/src/main/resources/templates/homework/1、v-for&v-bind.html
@@ -13,33 +13,22 @@
 
 <div id="test01">
   <ul>
-    <li :id="'#a'+index" v-for="item,index in movies" @click="click(index)">{{item}}</li>
+    <li v-for="item,index in movies" :class="{showRed: currentIndex === index}" @click="liClick(index)">{{item}}</li>
   </ul>
 </div>
 
 <script type="text/javascript" src="../../static/vue/vue.js"></script>
 <script type="text/javascript">
 
-  window.onload = function () {
-    var dom = document.getElementById("#a"+0);
-    dom.className = "showRed"
-  };
-
   const vue1 = new Vue({
     el: '#test01',
     data: {
       movies: ['海贼王','火影忍者','龙珠','钢之炼金术师'],
+      currentIndex: 0
     },
     methods: {
-      click: function (index) {
-        for (let i = 0; i < this.movies.length; i++) {
-          var dom = document.getElementById("#a"+i);
-          if (i !== index) {
-            dom.className = ""
-          }else {
-            dom.className = "showRed"
-          }
-        }
+      liClick: function (index) {
+        this.currentIndex = index
       }
     }
   });
